add functionality to front end to display results.

--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,8 @@
       <br>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-    <div class="results">
+    <br>
+    <div id="results">
     </div>
   </div>
   </body>
